--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "c-kzg": "^2.1.2",
+    "chai": "^5.1.0",
     "cors": "^2.8.5",
-    "ethers": "^6.11.1",
+    "ethers": "^6.12.0",
     "express": "^4.19.2",
+    "mocha": "^10.4.0",
     "viem": "^2.9.19"
   }
 }
