--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@ethsign/sp-sdk": "^0.3.29",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "c-kzg": "^2.1.2",
