--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ethsign/sp-sdk": "^0.3.29",
+    "@witnessco/client": "^0.2.0",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "c-kzg": "^2.1.2",
